[project]
name = "grokking-algorithms"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hao Nguyen", email = "hao@haonguyen.tech"},
]
dependencies = [
    "pytest>=8.3.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
